%% MEDIS — Class Diagram
%% Grouped by layer: model, controller, DAO (interface + Impl), db/util.
%% ( * = abstract, $ = static )
classDiagram
    direction TB

    %% ---------- MODEL ----------
    class User {
        <<abstract>>
        #int userId
        #String username
        #String passwordHash
        #String role
        +getUserId() int
        +getUsername() String
        +getRole() String
        +dashboardTitle() String*
    }
    class Admin {
        +Admin(int id, String username, String hash)
        +dashboardTitle() String
    }
    class Receptionist {
        +Receptionist(int id, String username, String hash)
        +dashboardTitle() String
    }
    class Doctor {
        -int doctorId
        -String name
        -String specialization
        +Doctor(int userId, String username, String hash, int doctorId, String name, String spec)
        +Doctor(int doctorId, String name, String specialization)
        +getDoctorId() int
        +getSpecialization() String
        +dashboardTitle() String
        +toString() String
    }
    class Patient {
        -int patientId
        -String name
        -int age
        -String gender
        -String medicalHistory
        +getPatientId() int
        +getName() String
        +getMedicalHistory() String
        +setName(String name) void
        +toString() String
    }
    class Appointment {
        -int appointmentId
        -LocalDateTime dateTime
        -Status status
        +getAppointmentId() int
        +getDateTime() LocalDateTime
        +getStatus() Status
        +setStatus(Status status) void
    }
    class Status {
        <<enumeration>>
        SCHEDULED
        COMPLETED
        CANCELLED
    }
    class Result {
        -boolean ok
        -String message
        -Object data
        +ok() Result$
        +ok(Object data) Result$
        +fail(String msg) Result$
        +isOk() boolean
        +getMessage() String
        +getData() Object
    }

    %% ---------- CONTROLLER ----------
    class SystemController {
        -User currentUser
        +login() LoginController
        +patient() PatientController
        +doctor() DoctorController
        +appointment() AppointmentController
        +report() ReportController
        +getCurrentUser() User
        +setCurrentUser(User user) void
        +logout() void
    }
    class LoginController {
        +authenticate(String username, String password) Result
    }
    class PatientController {
        +add(String name, int age, String gender, String history) Result
        +update(Patient p) Result
        +getAll() List~Patient~
    }
    class DoctorController {
        +add(String name, String specialization) Result
        +getAll() List~Doctor~
    }
    class AppointmentController {
        +book(int patientId, int doctorId, LocalDateTime dt) Result
        +cancel(int appointmentId) Result
        +getAll() List~Appointment~
    }
    class ReportController {
        +totalPatients() int
        +totalAppointments() int
        +doctorSchedules() Map
    }

    %% ---------- DAO ----------
    class UserDAO {
        <<interface>>
        +findByUsername(String username) Optional~User~
        +findAll() List~User~
    }
    class PatientDAO {
        <<interface>>
        +insert(Patient p) Result
        +update(Patient p) Result
        +findById(int id) Optional~Patient~
        +findAll() List~Patient~
    }
    class DoctorDAO {
        <<interface>>
        +insert(Doctor d) Result
        +findById(int id) Optional~Doctor~
        +findAll() List~Doctor~
    }
    class AppointmentDAO {
        <<interface>>
        +insert(Appointment a) Result
        +findAll() List~Appointment~
        +findByDoctor(int doctorId) List~Appointment~
        +existsByDoctorAndTime(int doctorId, LocalDateTime dt) boolean
        +updateStatus(int id, Status status) Result
    }
    class UserDAOImpl
    class PatientDAOImpl
    class DoctorDAOImpl
    class AppointmentDAOImpl

    %% ---------- DB / UTIL ----------
    class DatabaseConnection {
        <<singleton>>
        -DatabaseConnection instance$
        -Connection conn
        +getInstance() DatabaseConnection$
        +get() Connection
    }
    class Validator {
        <<utility>>
        +isNotBlank(String s) boolean$
        +isAgeValid(int age) boolean$
        +isFutureDate(LocalDateTime dt) boolean$
    }
    class PasswordHasher {
        <<utility>>
        +hash(String plain) String$
        +verify(String plain, String hash) boolean$
    }

    %% ---------- RELATIONSHIPS ----------
    %% Inheritance (generalization)
    User <|-- Admin
    User <|-- Receptionist
    User <|-- Doctor

    %% Realization (implements)
    UserDAO <|.. UserDAOImpl
    PatientDAO <|.. PatientDAOImpl
    DoctorDAO <|.. DoctorDAOImpl
    AppointmentDAO <|.. AppointmentDAOImpl

    %% Association (with multiplicity)
    Appointment "*" --> "1" Patient : refers to
    Appointment "*" --> "1" Doctor : refers to

    %% Composition (Status owned by Appointment)
    Appointment *-- Status : has

    %% Aggregation (SystemController holds the sub-controllers)
    SystemController o-- LoginController
    SystemController o-- PatientController
    SystemController o-- DoctorController
    SystemController o-- AppointmentController
    SystemController o-- ReportController
    SystemController --> User : currentUser

    %% Dependency (controllers depend on DAO interfaces + utils)
    LoginController ..> UserDAO
    LoginController ..> Validator
    LoginController ..> PasswordHasher
    PatientController ..> PatientDAO
    PatientController ..> Validator
    DoctorController ..> DoctorDAO
    AppointmentController ..> AppointmentDAO
    AppointmentController ..> PatientDAO
    AppointmentController ..> DoctorDAO
    AppointmentController ..> Validator
    ReportController ..> PatientDAO
    ReportController ..> DoctorDAO
    ReportController ..> AppointmentDAO

    %% DAO implementations use the shared singleton connection
    UserDAOImpl ..> DatabaseConnection
    PatientDAOImpl ..> DatabaseConnection
    DoctorDAOImpl ..> DatabaseConnection
    AppointmentDAOImpl ..> DatabaseConnection
